<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >

        <!-- Contenido del CardView -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="20dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:padding="24dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_login"
                    android:textSize="36sp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/txtUser"
                    android:drawablePadding="8dp"
                    android:hint="@string/hint_user"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:layout_marginTop="40dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/txtPass"
                    android:hint="@string/hint_pass"
                    android:padding="8dp"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:id="@+id/btnLogin"
                    android:text="@string/btn_login"
                    android:textSize="18sp"
                    android:backgroundTint="@color/bar_color"
                    android:layout_marginTop="30dp"
                    app:cornerRadius = "20dp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/description"
            android:textSize="14sp"
            android:textAlignment="center"
            android:id="@+id/signupText"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>
</FrameLayout>
