<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarProducto">

    <include
        android:id="@+id/app_bar_id"
        layout="@layout/app_bar_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/imgShape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgShape"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/txtNombre"
        app:layout_constraintStart_toStartOf="@+id/app_bar_id"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_id"
        app:srcCompat="@drawable/shape" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/registrar_prod"
        android:textColor="@color/title_Color"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imgShape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="322dp"
        android:layout_height="55dp"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="16dp"
        android:drawablePadding="8dp"
        android:hint="@string/nombre_producto"
        android:padding="8dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/txtPrecio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgShape" />

    <EditText
        android:id="@+id/txtPrecio"
        android:layout_width="322dp"
        android:layout_height="55dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="16dp"
        android:drawablePadding="8dp"
        android:hint="@string/precio_producto"
        android:inputType="number"
        android:padding="8dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre"></EditText>

    <Spinner
        android:id="@+id/spinnerTipoProducto"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="9dp"
        app:layout_constraintBottom_toTopOf="@+id/btnRegistrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="51dp"
        android:text="@string/tipo_producto"
        android:textColor="@color/primary_color"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnRegistrar"
        app:layout_constraintStart_toStartOf="@+id/spinnerTipoProducto"
        app:layout_constraintTop_toBottomOf="@+id/txtPrecio" />

    <ListView
        android:id="@+id/lvProductos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegistrar" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="177dp"
        android:layout_height="68dp"
        android:layout_marginBottom="19dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/primary_color"
        android:text="@string/btn_registrar"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:cornerRadius="40dp"
        app:layout_constraintBottom_toTopOf="@+id/lvProductos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


</androidx.constraintlayout.widget.ConstraintLayout>

